Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130313

Garbage text output

XMLWordPrintable

    • Windows
    • f5e2166bb (6.9), a0b9cb8f0 (6.8)

      I've been trying to track down why some people using our app on Windows (10 and 11) are experiencing garbage text output like shown below. We just upgraded from Qt 6.2 to 6.8 and some people are fine on Windows, others get garbled text.

      What's strange is that when it happens, some of the text is correct (but most is trashed).

      We are using an embedded font for UI consistently between platforms. We've tried forcing the system to use OpenGL which has no affect. It doesn't seem like the graphics card in use has any relevance to it.

      Despite our efforts, we cannot reproduce this locally. But the people that report the problem, always have the problem. Those that don't, never have it.

      I'd say around half of the people testing our app hit this problem.

       

       

        1. image-2024-10-21-08-13-07-736.png
          678 kB
          Nicolas Sterling
        2. image-2024-10-21-08-19-06-683.png
          551 kB
          Nicolas Sterling
        3. Robotx.ttf
          103 kB
          Nicolas Sterling
        4. Screenshot.png
          12 kB
          Andris Dalbergs
        For Gerrit Dashboard: QTBUG-130313
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            obsess Nicolas Sterling
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes